# MiniUI

./: LICENSE  MiniUI.opam  README.md  dune-project
legacy/lib/: MiniUI.ml  MiniUI.mli
legacy/test/: test_MiniUI.ml
lib/: MiniUI.ml  MiniUI.mli  dune
test/: dune  example.ml  test_MiniUI.ml
