(lang dune 3.20)

(name MiniUI)

(generate_opam_files true)

(source
 (codeberg peonynope/MiniUI))

(authors "Peony <peonynopes@gmail.com>")

(maintainers "Peony <peonynopes@gmail.com>")

(license MIT)

(documentation https://url/to/documentation)

(package
 (name MiniUI)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
